@@ -20,7 +20,7 @@
       <%= borrado icono('Trash',{:title => 'Borrar'}), { :action => 'borrar', :id => objeto.id } ,
 		'Borrar Factura', 'Factura: ' + objeto.codigo + " (" + objeto.fecha.to_s + ")" + '<br>IMPORTANTE: Sólo debería borrar la factura si no ha emitió aún ticket o comprobante o no se han realizado pagos sobre ésta.<br>Se volverá a generar el albarán con estado abierto.' , :ajax => false %>
     </div>
-    <div class="listado_derecha" id="factura_<%= objeto.id.to_s %>_aviso_pago" <%= 'style="display:none;"' if objeto.pagado %> >
+    <div class="listado_derecha" id="factura_<%= objeto.id.to_s %>_aviso_pago" <%= 'style="display:none;"' if (objeto.pagado && objeto.importe == 0) %> >
       <%= icono('Exclamation', {:title => "La factura no está completamente pagada!", :style => ( objeto.pagado ? 'display: none;' : '') }) %>
     </div>
   </div>
